# hermes-swarm

./: .env.example  .gitignore  LICENSE  PRODUCT.md  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  seed_company.py  seed_minimal.py  seed_team.py  wakeup_log.txt
dashboard/: index.html
deploy/: hermes-swarm.service
docs/: deploy-vps.md  getting-started.md
landing/: index.html  install.html  product.html  site.js  style.css
swarm_server/: __main__.py  agent.py  browser_gui_tools.py  browser_pool.py  browser_stream.py  budget.py  cli.py  config.py  credentials.py  cron.py  loop_detector.py  master.py  model_config.py  monitoring.py  prompts.py  queue.py  server.py  soul_template.py  summarizer.py  tools.py  web_crawl4ai.py  websocket.py
tests/: test_auth.py  test_browser_stream.py  test_budget.py  test_compaction.py  test_lifecycle.py  test_model_routing.py  test_robustness.py  test_tool_injection.py  test_web_fallback.py
